[gd_scene load_steps=9 format=3 uid="uid://bcqu1jyk77ksi"]

[ext_resource type="Script" path="res://scripts/po_widget.gd" id="1_25ver"]
[ext_resource type="Material" uid="uid://dp7a3pqw8vton" path="res://textures/widget_highlight_material.tres" id="2_3xevt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_geuhr"]
radius = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_bpgdj"]
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rnoib"]
no_depth_test = true
shading_mode = 0
albedo_color = Color(0.803922, 0.262745, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qyqwj"]
flip_faces = true
radius = 1.1
height = 2.2

[sub_resource type="BoxMesh" id="BoxMesh_pmspt"]
size = Vector3(2.2, 2.2, 2.2)

[sub_resource type="SphereMesh" id="SphereMesh_pi7db"]
radius = 1.0
height = 2.0

[node name="POWidget" type="Node3D"]
top_level = true
script = ExtResource("1_25ver")

[node name="WidgetMoveOrigin" type="StaticBody3D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="WidgetMoveOrigin"]
shape = SubResource("SphereShape3D_geuhr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D"]
mesh = SubResource("SphereMesh_bpgdj")
surface_material_override/0 = SubResource("StandardMaterial3D_rnoib")

[node name="MeshHighlightOrigin" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
cast_shadow = 0
mesh = SubResource("SphereMesh_qyqwj")
surface_material_override/0 = ExtResource("2_3xevt")

[node name="MeshHighlightOriginEdit" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
visible = false
cast_shadow = 0
mesh = SubResource("BoxMesh_pmspt")
surface_material_override/0 = ExtResource("2_3xevt")

[node name="ShadowMesh" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
mesh = SubResource("SphereMesh_pi7db")
